# ZhaoXi

./: CLAUDE.md  package-lock.json  tech-spec.md
.github/workflows/: build.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  session_2025_02_15.md  session_2026_02_15.md  suggested_commands.md  task_completion.md  zhaoxi-os-app-plugin-system.md
app/: .env.example  .gitignore  TAURI.md  index.html  package-lock.json  package.json  screenshot.js
app/agent/commands/: plan-week.md
app/agent/mcp/: servers.json
app/agent/skills/core-planner/: SKILL.md  manifest.json
app/public/apps/pomodoro/: index.html
app/server/: index.ts
app/server/db/: database.ts
app/server/routes/: events.ts  personal.ts  projects.ts  todos.ts
app/src/: App.tsx  index.css
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  database.rs  main.rs
app/src/components/features/: AddAppDialog.tsx  CalendarGrid.tsx  DynamicIcon.tsx  HotList.tsx  MoodSelector.tsx  ProjectCard.tsx  SidebarSettingsDialog.tsx  StatCard.tsx  TodoItem.tsx  WeatherCard.tsx
app/src/components/layout/: GlassCard.tsx  Sidebar.tsx
app/src/components/ui/: sidebar.tsx
app/src/lib/: agentApi.ts  api.ts  apps.ts
app/src/pages/: AchievementsPage.tsx  AgentPage.tsx  AppContainer.tsx  AppsPage.tsx  Dashboard.tsx  InspirationPage.tsx  JournalPage.tsx  PersonalPage.tsx  ProjectsPage.tsx  SchedulePage.tsx  TodoPage.tsx
app/src/stores/: agentStore.ts  appStore.ts
app/src/types/: agent.ts  index.ts
