[package]
name = "explore-os"
version = "0.1.0"
description = "Explore OS - 个人工作台"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# SQLite
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
